# securing-chromadb

./: .gitignore  README.md  pyproject.toml
docker/: README.md  docker-compose.yaml  setup.sh  test.py
docker/auth/: nginx.conf
